sas-core/main/default/objects/GDPR_Related_Channel_Object__mdt/GDPR_Related_Channel_Object__mdt.object-meta.xml
<CustomObject>
    <label>GDPR Related Channel Object</label>
    <pluralLabel>GDPR Related Channel Objects</pluralLabel>
</CustomObject>