sas-core/main/default/objects/GDPR_Related_Channel_Object__mdt/fields/GDPR_Retention_Policy__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Retention_Policy__c</fullName>
    <label>GDPR Retention Policy</label>
    <referenceTo>GDPR_Retention_Policy__mdt</referenceTo>
    <relationshipLabel>GDPR Related Channel Objects</relationshipLabel>
    <relationshipName>GDPR_Related_Channel_Objects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>