sas-core/main/default/objects/GDPR_Related_Channel_Object__mdt/fields/Related_Case_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Lookup_Field__c</fullName>
    <label>Related Case Lookup Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>