sas-core/main/default/objects/GDPR_Related_Channel_Object__mdt/fields/Related_Sobject_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Sobject_Lookup_Field__c</fullName>
    <label>Related Sobject Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>