sas-core/main/default/objects/GDPR_Related_Channel_Object__mdt/fields/Related_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_SObject_Name__c</fullName>
    <label>Related SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>