sas-core/main/default/objects/GDPR_Related_Channel_Object__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>